handle clicking on an occupied cell logic

--- a/client/src/components/Cell.scss
+++ b/client/src/components/Cell.scss
@@ -12,3 +12,10 @@
 .blue {
   background-color: blue;
 }
+
+@media screen and (max-width: 600px) {
+  .cell {
+    width: 80px;
+    height: 80px;
+  }
+}
