--- a/client/src/components/PlayArea.scss
+++ b/client/src/components/PlayArea.scss
@@ -1,7 +1,16 @@
 .play-area {
   background-color: yellow;
   border-radius: 5px;
-  width: 90vw;
-  margin: auto;
+  // width: 90vw;
+  // margin: auto;
   padding: 10px;
+}
+
+.parent {
+  display: flex;
+  justify-content: space-around;
+}
+
+.data-display {
+  width: 33%;
 }
