--- a/client/src/components/Cell.scss
+++ b/client/src/components/Cell.scss
@@ -1,7 +1,7 @@
 .cell {
   background-color: white;
-  width: 120px;
-  height: 120px;
+  width: 14.5vh;
+  height: 14.5vh;
   border-radius: 50%;
 }
 
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 600px) {
   .cell {
-    width: 80px;
-    height: 80px;
+    width: 7vh;
+    height: 7vh;
   }
 }
