--- a/client/src/components/PlayArea.scss
+++ b/client/src/components/PlayArea.scss
@@ -1,16 +1,22 @@
 .play-area {
   background-color: yellow;
   border-radius: 5px;
-  // width: 90vw;
-  // margin: auto;
   padding: 10px;
 }
 
 .parent {
   display: flex;
   justify-content: space-around;
+  height: 100vh;
 }
 
 .data-display {
   width: 33%;
+}
+
+@media screen and (max-width: 600px) {
+  .parent {
+    flex-direction: column;
+    height: 60vh;
+  }
 }
